cmake_minimum_required(VERSION 3.26)
project(C_PROGRAMMING_2_0 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
add_executable(C_PROGRAMMING_2_0
"function.c"
        "fibonacci series.c"
        "fibonacci series.c"
        "pattern without if or continue.c"
        "storage converter.c"
        "area of triangle using heron's formula.c"
        "St. line.c"
        "rightangle triangle.c"
        "student info.c"
        "Simple & Compound interest.c"
        "positive or negative.c"
        "currency converter.c"
        "greatest bw 2 numbers.c")
