cmake_minimum_required(VERSION 3.26)
project(C_PROGRAMMING_2_0 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
add_executable(C_PROGRAMMING_2_0
"function.c"
        "fibonacci series.c"
        "fibonacci series.c"
        "pattern without if or continue.c"
        "storage converter.c"
        "area of triangle using heron's formula.c"
        "St. line.c"
        "rightangle triangle.c"
        "student info.c"
        "Simple & Compound interest.c"
        "positive or negative.c"
        "currency converter.c"
        "greatest bw 2 numbers.c"
        remarks.c
        "algebric identities.c"
        "Regular hexagon.c"
        Grade.c
        "Right or left shift.c"
        size.c
        error.c
        "error p-2.c"
        "vowel & consonent.c"
        "uc & lc.c"
        "area of square and rectangle.c"
        BP.c
        "greatest no using && operator.c"
        "smallest using && operator.c"
        "sum of first n natural numbers.c"
        Bill.c
        "vowel & consonent using switch case.c"
        week.c
        "data type.c"
        "prime or composite.c"
        n!.c
        "palindrome pyramid.c"
        "alphabet pattern.c"
        "pattern sp.c"
        "pattern sq..c"
        "Hello world n trimes.c"
        "diamond shape.c"
        "palindrome number.c"
        "counting the digit of number.c"
        "Array(capture elements from user & display).c"
        "Beep sound.c"
        "decimal to binary.c"
        "amicable or not.c"
        "HCF of two numbers.c"
        "Print all the arrays.c"
        "Print all the arrays.c")
