cmake_minimum_required(VERSION 3.26)
project(C_PROGRAMMING_2_0 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
add_executable(C_PROGRAMMING_2_0
"function.c"
        "pattern without if or continue.c"
        "storage converter.c"
        "area of triangle using heron's formula.c"
        "St. line.c"
        "rightangle triangle.c"
        "student info.c"
        "Simple & Compound interest.c"
        "positive or negative.c"
        "currency converter.c"
        "greatest bw 2 numbers.c"
        remarks.c
        "algebric identities.c"
        "Regular hexagon.c"
        Grade.c
        "Right or left shift.c"
        size.c
        error.c
        "error p-2.c"
        "vowel & consonent.c"
        "uc & lc.c"
        "area of square and rectangle.c"
        BP.c
        "greatest no using && operator.c"
        "smallest using && operator.c"
        "sum of first n natural numbers.c"
        Bill.c
        "vowel & consonent using switch case.c"
        week.c
        "data type.c"
        "prime or composite.c"
        n!.c
        "palindrome pyramid.c"
        "alphabet pattern.c"
        "pattern sp.c"
        "pattern sq..c"
        "Hello world n trimes.c"
        "diamond shape.c"
        "palindrome number.c"
        "counting the digit of number.c"
        "Array(capture elements from user & display).c"
        "Beep sound.c"
        "decimal to binary.c"
        "amicable or not.c"
        "HCF of two numbers.c"
        "Print all the arrays.c"
        "Print all the arrays.c"
        "Print individual numbers using array.c"
        "2D Array.c"
        "Discriminant value of quadratic eqn..c"
        "Logarithm value.c"
        "ASCII value.c"
        "increment & decrement.c"
        "Alphabet pattern p-2.c"
        "Area of circle.c"
        "Armstrong number.c"
        "Even numbers within a specific range.c"
        "File Handling.c"
        "Find greatest number using function.c"
        "Gross salary.c"
        "Length of a string.c"
        "String functions.c"
        Queue.c
        "Hour glass by alphabet.c"
        "Reverse string.c"
        "Friendly number.c"
        "Happy number.c"
        "Unique number .c"
        "sum of n numbers using recursion.c"
        "Area of circle using recursive function.c"
        "Tree recursion.c"
        "sum of 2D array.c"
        "Employee salary.c"
        "Smart Bazar.c"
        "Multiply 2D array.c"
        "Implement all string function.c"
        "Add 2 complex numbers.c"
        "Bubble sorting.c"
        Union.c
        "Union inside structure.c"
        "Checking file exists or not.c"
        "Read data from a file.c"
        "modify data in a file.c"
        "Append opperation.c"
        Macro.c
        "Stack data structure.c"
        "check a string ha odd or even charcters w.o. using string function.c"
        "Create file.c"
        "Access element of an array using pointer.c"
        "length of array using sizeof function.c"
        "Factors of a number.c"
        "Floyd's triangle.c"
        "sum of 2 floating number.c"
        "Print Hello world using pointer.c"
        "Find largest using pointers.c"
        "Delete an element from array.c"
        "../../../../../../../../fibonacci series.c"
        "Fibonacci series.c"
        "Binary search.c"
        "Check repetition of a number in an array.c"
        "list all files from directory.c"
        "Read data from a file and display.c")
